--- a/3d-infographic.html
+++ b/3d-infographic.html
@@ -1240,11 +1240,11 @@
 
                     <div class="media-body">
                       <h4 class="g-color-gray-dark-v1 g-mb-15">
-                        <a class="u-link-v5 g-color-gray-dark-v1 g-color-primary--hover" href="#">Marina Olsson</a>
+                        <a class="u-link-v5 g-color-gray-dark-v1 g-color-primary--hover" href="https://spurno.github.io">SPurno Animation Studio</a>
                       </h4>
 
                       <div class="g-mb-15">
-                        <p>About my site amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at.</p>
+                        <p>SPurno is creating beautiful animation videos for video editors and motion graphics designer.</p>
                       </div>
 
                       <ul class="list-inline mb-0">
@@ -1269,158 +1269,10 @@
                 </div>
                 <!-- End Author Block -->
 
-                <!-- Comments -->
-                <div class="g-mb-60">
-                  <div class="u-heading-v3-1 g-mb-30">
-                    <h2 class="h5 u-heading-v3__title g-color-gray-dark-v1 text-uppercase g-brd-primary">24 Comments</h2>
-                  </div>
-
-                  <!-- Comment 1 -->
-                  <div class="media g-brd-around g-brd-gray-light-v4 rounded g-pa-30 g-mb-20">
-                    <img class="d-flex u-shadow-v25 g-width-50 g-height-50 rounded-circle g-mr-15" src="blog/assets/img-temp/100x100/img9.jpg" alt="SPurno Animation Studio">
-
-                    <div class="media-body">
-                      <div class="g-mb-15">
-                        <h5 class="d-flex justify-content-between align-items-center g-font-size-16 g-color-gray-dark-v1 mb-0">
-                          <span class="d-block g-mr-10">James Coolman</span>
-                          <a class="u-tags-v1 g-font-size-12 g-brd-around g-brd-gray-light-v4 g-bg-primary--hover g-brd-primary--hover g-color-black-opacity-0_8 g-color-white--hover rounded g-py-6 g-px-15" href="#">Author</a>
-                        </h5>
-                        <span class="g-color-gray-dark-v4 g-font-size-12">2 days ago</span>
-                      </div>
-
-                      <div class="g-mb-15">
-                        <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus ras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
-                      </div>
-
-                      <ul class="list-inline d-sm-flex my-0">
-                        <li class="list-inline-item g-mr-20">
-                          <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#">
-                            <i class="icon-like g-pos-rel g-top-1 g-mr-3"></i> 214
-                          </a>
-                        </li>
-                        <li class="list-inline-item g-mr-20">
-                          <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#">
-                            <i class="icon-dislike g-pos-rel g-top-1 g-mr-3"></i> 35
-                          </a>
-                        </li>
-                        <li class="list-inline-item ml-auto">
-                          <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#">
-                            <i class="icon-note g-pos-rel g-top-1 g-mr-3"></i> Reply
-                          </a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                  <!-- End Comment 1 -->
-
-                  <!-- Comment 2 -->
-                  <div class="media g-brd-around g-brd-gray-light-v4 rounded g-pa-30 g-ml-40 g-mb-20">
-                    <img class="d-flex u-shadow-v25 g-width-50 g-height-50 rounded-circle g-mr-15" src="blog/assets/img-temp/100x100/img10.jpg" alt="SPurno Animation Studio">
-
-                    <div class="media-body">
-                      <div class="g-mb-15">
-                        <h5 class="g-font-size-16 g-color-gray-dark-v1 mb-0">Alberta Watson</h5>
-                        <span class="g-color-gray-dark-v4 g-font-size-12">3 days ago</span>
-                      </div>
-
-                      <div class="g-mb-15">
-                        <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus ras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
-                      </div>
-
-                      <ul class="list-inline d-sm-flex my-0">
-                        <li class="list-inline-item g-mr-20">
-                          <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#">
-                            <i class="icon-like g-pos-rel g-top-1 g-mr-3"></i> 637
-                          </a>
-                        </li>
-                        <li class="list-inline-item g-mr-20">
-                          <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#">
-                            <i class="icon-dislike g-pos-rel g-top-1 g-mr-3"></i> 12
-                          </a>
-                        </li>
-                        <li class="list-inline-item ml-auto">
-                          <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#">
-                            <i class="icon-note g-pos-rel g-top-1 g-mr-3"></i> Reply
-                          </a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                  <!-- End Comment 2 -->
-
-                  <!-- Comment 3 -->
-                  <div class="media g-brd-around g-brd-gray-light-v4 rounded g-pa-30 g-mb-20">
-                    <img class="d-flex u-shadow-v25 g-width-50 g-height-50 rounded-circle g-mr-15" src="blog/assets/img-temp/100x100/img11.jpg" alt="SPurno Animation Studio">
-
-                    <div class="media-body">
-                      <div class="g-mb-15">
-                        <h5 class="g-font-size-16 g-color-gray-dark-v1 mb-0">David Lee</h5>
-                        <span class="g-color-gray-dark-v4 g-font-size-12">4 days ago</span>
-                      </div>
-
-                      <div class="g-mb-15">
-                        <p>Sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus ras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
-                      </div>
-
-                      <ul class="list-inline d-sm-flex my-0">
-                        <li class="list-inline-item g-mr-20">
-                          <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#">
-                            <i class="icon-like g-pos-rel g-top-1 g-mr-3"></i> 192
-                          </a>
-                        </li>
-                        <li class="list-inline-item g-mr-20">
-                          <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#">
-                            <i class="icon-dislike g-pos-rel g-top-1 g-mr-3"></i> 87
-                          </a>
-                        </li>
-                        <li class="list-inline-item ml-auto">
-                          <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#">
-                            <i class="icon-note g-pos-rel g-top-1 g-mr-3"></i> Reply
-                          </a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                  <!-- End Comment 3 -->
-
-                  <div class="text-center g-mt-30">
-                    <a class="btn u-btn-outline-primary g-font-size-12 text-uppercase g-px-25 g-py-13" href="#">
-                      <i class="icon-finance-206 u-line-icon-pro align-middle g-pos-rel g-top-1 mr-2"></i> Load More Comments
-                    </a>
-                  </div>
-                </div>
-                <!-- Comments -->
-
-                <!-- Add Comment -->
-                <div class="g-mb-60">
-                  <div class="u-heading-v3-1 g-mb-30">
-                    <h2 class="h5 u-heading-v3__title g-color-gray-dark-v1 text-uppercase g-brd-primary">Add a Comment</h2>
-                  </div>
-
-                  <form>
-                    <div class="row">
-                      <div class="col-md-6 form-group g-mb-30">
-                        <input class="form-control g-color-black g-bg-white g-bg-white--focus g-brd-gray-light-v4 g-brd-primary--focus rounded-3 g-pa-15" type="text" placeholder="Your Name">
-                      </div>
-
-                      <div class="col-md-6 form-group g-mb-30">
-                        <input class="form-control g-color-black g-bg-white g-bg-white--focus g-brd-gray-light-v4 g-brd-primary--focus rounded-3 g-pa-15" type="email" placeholder="Email">
-                      </div>
-                    </div>
-
-                    <div class="g-mb-30">
-                      <textarea class="form-control g-color-black g-bg-white g-bg-white--focus g-brd-gray-light-v4 g-brd-primary--focus g-resize-none rounded-3 g-pa-15" rows="12" placeholder="Your Message"></textarea>
-                    </div>
-
-                    <a class="btn u-btn-primary g-font-size-12 text-uppercase g-px-25 g-py-13" href="#">
-                      <i class="icon-finance-206 u-line-icon-pro align-middle g-pos-rel g-top-1 mr-2"></i> Add a Comment
-                    </a>
-                  </form>
-                </div>
-                <!-- End Add Comment -->
+ 
               </article>
 
-              <div id="stickyblock-end"></div>
+ 
             </div>
             <!-- End Articles Content -->
 
@@ -1947,121 +1799,7 @@
 
         <div class="container">
           <!-- Footer - Content -->
-          <div class="g-brd-bottom--md g-brd-secondary-light-v2 g-pb-30--md g-mb-30">
-            <div class="row">
-              <div class="col-6 col-md-3 g-brd-right--md g-brd-secondary-light-v2 g-mb-30 g-mb-0--md">
-                <h3 class="h6 g-font-primary g-font-weight-700 text-uppercase mb-3">News</h3>
-
  
-              </div>
-
-              <div class="col-6 col-md-3 g-brd-right--md g-brd-secondary-light-v2 g-mb-30 g-mb-0--md">
-                <div class="g-pl-10--md">
-                  <h3 class="h6 g-font-primary g-font-weight-700 text-uppercase mb-3">Opinion</h3>
-
- 
-                </div>
-              </div>
-
-              <div class="col-md-6">
-                <div class="g-pl-10--md">
-                  <h3 class="h6 g-font-primary g-font-weight-700 text-uppercase mb-3">Latest Videos</h3>
-
-                  <!-- Carousel -->
-                  <div id="carouselCus1" class="js-carousel g-mx-minus-5"
-                       data-infinite="true"
-                       data-slides-show="2"
-                       data-lazy-load="ondemand"
-                       data-arrows-classes="u-arrow-v1 g-pos-abs g-top-minus-35 g-width-30 g-height-30 g-color-secondary-dark-v1 g-color-primary--hover"
-                       data-arrow-left-classes="fa fa-angle-left g-right-30"
-                       data-arrow-right-classes="fa fa-angle-right g-right-0">
-                    <div class="js-slide g-px-5">
-                      <!-- Magazines -->
-                      <figure class="u-block-hover g-pos-rel">
-                        <img class="img-fluid u-block-hover__main--zoom-v1 g-transition-0_5" src="blog/assets2/img-temp/350x400/img3.jpg" alt="SPurno Animation Studio">
-                        <figcaption class="g-color-white">
-                          <div class="g-pos-abs g-top-0 g-left-0 g-pa-20">
-                            <h2 class="h4 g-color-white">Singer<br>of the Year</h2>
-                          </div>
-                          <div class="w-50 g-pos-abs g-bottom-0 g-left-0 g-pa-20">
-                            <span class="d-block h6 g-color-white">Manchester Evening</span>
-                          </div>
-                          <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
-                            <span class="d-block h6 g-color-white">2024</span>
-                          </div>
-                          <a class="u-link-v2" href="#"></a>
-                        </figcaption>
-                      </figure>
-                      <!-- End Magazines -->
-                    </div>
-
-                    <div class="js-slide g-px-5">
-                      <!-- Magazines -->
-                      <figure class="u-block-hover g-pos-rel">
-                        <img class="img-fluid u-block-hover__main--zoom-v1 g-transition-0_5" src="blog/assets2/img-temp/350x400/img2.jpg" alt="SPurno Animation Studio">
-                        <figcaption class="g-color-white">
-                          <div class="g-pos-abs g-top-0 g-left-0 g-pa-20">
-                            <h2 class="h4 g-color-white">Trip to<br>Wonderland</h2>
-                          </div>
-                          <div class="w-50 g-pos-abs g-bottom-0 g-left-0 g-pa-20">
-                            <span class="d-block h6 g-color-white">The New York Times</span>
-                          </div>
-                          <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
-                            <span class="d-block h6 g-color-white">2024</span>
-                          </div>
-                          <a class="u-link-v2" href="#"></a>
-                        </figcaption>
-                      </figure>
-                      <!-- End Magazines -->
-                    </div>
-
-                    <div class="js-slide g-px-5">
-                      <!-- Magazines -->
-                      <figure class="u-block-hover g-pos-rel">
-                        <img class="img-fluid u-block-hover__main--zoom-v1 g-transition-0_5" src="blog/assets2/img-temp/350x400/img1.jpg" alt="SPurno Animation Studio">
-                        <figcaption class="g-color-white">
-                          <div class="g-pos-abs g-top-0 g-left-0 g-pa-20">
-                            <h2 class="h4 g-color-white">Science<br>in Yellow</h2>
-                          </div>
-                          <div class="w-50 g-pos-abs g-bottom-0 g-left-0 g-pa-20">
-                            <span class="d-block h6 g-color-white">Sunday News</span>
-                          </div>
-                          <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
-                            <span class="d-block h6 g-color-white">2024</span>
-                          </div>
-                          <a class="u-link-v2" href="#"></a>
-                        </figcaption>
-                      </figure>
-                      <!-- End Magazines -->
-                    </div>
-
-                    <div class="js-slide g-px-5">
-                      <!-- Magazines -->
-                      <figure class="u-block-hover g-pos-rel">
-                        <img class="img-fluid u-block-hover__main--zoom-v1 g-transition-0_5" src="blog/assets2/img-temp/350x400/img4.jpg" alt="SPurno Animation Studio">
-                        <figcaption class="g-color-white">
-                          <div class="g-pos-abs g-top-0 g-left-0 g-pa-20">
-                            <h2 class="h4 g-color-white">Magnificent<br>Woman</h2>
-                          </div>
-                          <div class="w-50 g-pos-abs g-bottom-0 g-left-0 g-pa-20">
-                            <span class="d-block h6 g-color-white">The New York Times</span>
-                          </div>
-                          <div class="w-50 text-right g-pos-abs g-bottom-0 g-right-0 g-pa-20">
-                            <span class="d-block h6 g-color-white">2024</span>
-                          </div>
-                          <a class="u-link-v2" href="#"></a>
-                        </figcaption>
-                      </figure>
-                      <!-- End Magazines -->
-                    </div>
-                  </div>
-                  <!-- End Carousel -->
-                </div>
-              </div>
-
-              <div class="w-100 g-brd-bottom--md g-brd-secondary-light-v2 g-pb-40--md g-mb-40"></div>
-            </div>
-          </div>
           <!-- End Footer - Content -->
 
           <!-- Footer - Top Section -->
