--- a/infographic.html
+++ b/infographic.html
@@ -1383,7 +1383,7 @@
 
                   <div class="media-body">
                     <h4 class="g-color-gray-dark-v1 g-mb-15">
-                      <a class="u-link-v5 g-color-gray-dark-v1 g-color-primary--hover" href="#">Marina Olsson</a>
+                      <a class="u-link-v5 g-color-gray-dark-v1 g-color-primary--hover" href="https://spurno.github.io">SPurno Animation Studio</a>
                     </h4>
 
                     <div class="g-mb-15">
